Se actualizo los archivos

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokedex</title>
-    <link rel="stylesheet" href="/estilos/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <head>
       <nav class="nav">
-        <img src="/img/logo.png" alt="Logo Pokédex"" />
+        <img src="logo.png" alt="Logo Pokédex" />
         <ul class="nav-list">
             <li class="nav-item"><button class="btn btn-header" id="ver-todos">Ver todos</button></li> 
             <li class="nav-item"><button class="btn btn-header normal" id="normal">Normal</button></li>
@@ -50,6 +50,6 @@
       </div>
     </main>
 
-    <script src="/principal/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
